--- a/Assignment6/index.html
+++ b/Assignment6/index.html
@@ -1,76 +1,59 @@
 <!DOCTYPE html>
-
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Mobile Layout in Color</title>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/style.css">
-		<script async="" src="//www.google-analytics.com/analytics.js"></script>
-	</head>
-	<body>
-	<div id="layout">
-			<a href="#menu" id="menuLink" class="menu-link"><!--
-      		  --><span>
-      		  		::before
-      		  		::after
-      		  	</span>
-    		</a>
-    	<div id="menu" class>
-
-    	</div>
-    	<div class="pure-menu pure-menu-open">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
+</head>
+<body>
+  <div id="layout">
+    <a href="#menu" id="menuLink" class="menu-link">
+        <!-- Hamburger icon -->
+        <span></span>
+    </a>
+    <div id="menu">
+        <div class="pure-menu">
             <a class="pure-menu-heading" href="#">Company</a>
 
-            <ul>
-               	<li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
+            <ul class="pure-menu-list">
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">About</a></li>
 
-               	<li class="menu-item-divided pure-menu-selected">
-                    <a href="#">Services</a>
+                <li class="pure-menu-item">
+                    <a href="#" class="pure-menu-link">Services</a>
                 </li>
 
-                <li><a href="#">Contact</a></li>
-            	</ul>
-       	</div>
-    	<div id="main">
-    		<div class="header">
-            	<h1>Page Title</h1>
-            	<h2>A subtitle goes here</h2>
-       		</div>
-       		<div class="content">
-            <h2 class="content-subhead">How Do I use This Layout?!</h2>
-            <p>
-                A bunch of text with some links, but I'm going to ignore those links for now.
-            </p>
-
-            <h2 class="content-subhead">Now Let's Have Another Heading/h2>
-            <p>
-                And another text box
-            </p>
-
-            <div class="pure-g">
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
-                </div>
-                <div class="pure-u-1-4">
-                    <img class="pure-img-responsive" src="http://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg" alt="Mountain">
-                </div>
-            </div>
-
-            <h2 class="content-subhead">Try Resizing your Browser</h2>
-            <p>
-                One last text box.
-            </p>
+                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Contact</a></li>
+            </ul>
         </div>
-    	</div>
-	</div>
-	</body>
+    </div>
+  </div>
+  <div class="heading">
+    <h1>Page Title</h1>
+    <h2>A subtitle for your page goes here</h2>
+  </div>
+  <div class="text">
+    <h1>How to use this layout</h1>
+    <p>To use this layout, you can just copy paste the HTML, along with the CSS in side-menu.css, and the JavaScript in ui.js. The JS file uses vanilla JavaScript to simply toggle an active class that makes the menu responsive.</p>
+    <h1>Now Let's Speak Some Latin</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="banner">
+      <div class="firstPic" id="image">
+        <img src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg">
+      </div>
+      <div class="secondPic" id="image">
+        <img src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg">
+      </div>
+      <div class="thirdPic" id="image">
+        <img src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg">
+      </div>
+      <div class="fourthPic" id="image">
+        <img src="http://farm8.staticflickr.com/7357/9086701425_fda3024927.jpg">
+      </div>
+    </div>
+    <h1>Try Resizing your Browser</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</body>
 </html>
